<resources>
    <string name="app_name">Short quiz about Lithuania</string>
    <string name="title">This is short quiz about Lithuania.</string>
    <string name="questionOne">When is Lithuania independence day is?</string>
    <string name="questionTwo">What is the name of the only king of Lithuania?</string>
    <string name="questionThree">How many people there lives in Lithuania?</string>
    <string name="questionFour">What sport is nominated as second religion in Lithuania?</string>
    <string name="questionFive">How many Olympic medals Lithuanians won in RIO 2016?</string>
    <string name="questionSix">In what sports did medals was won?</string>
    <string name="questionSeven">What is the capital of Lithuania?</string>
    <string name="questionEight">If you want directions there, please click a button</string>
    <string name="setDate">Enter date</string>
    <string name="date_example">1995/08/31</string>
    <string name="name_example">Vytautas</string>
    <string name="anwserRadio1">Less than 3 millions</string>
    <string name="anwserRadio2">3 millions</string>
    <string name="anwserRadio3">More than 3 millions</string>
    <string name="getResults">Check my result</string>
    <string name="result_title">This is your result:</string>
    <string name="anwserRadio4">Football</string>
    <string name="anwserRadio5">Basketball</string>
    <string name="anwserRadio6">Tennis</string>
    <string name="number_example">3</string>
    <string name="checkbox1">Academinc Rowing</string>
    <string name="checkbox2">Weightlifting</string>
    <string name="checkbox3">Canoeing</string>
    <string name="checkbox4">Box</string>
    <string name="checkbox5">Basketball</string>
    <string name="city_example">Tallin</string>
    <string name="getDirections">Get directions</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="share_results">Share your result via email</string>

</resources>
