<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.tautvydasquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            style="@style/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOne" />

        <EditText
            android:id="@+id/firstAnwser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_example"
            android:inputType="date"
            />

        <TextView
            style="@style/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionTwo" />

        <EditText
            android:id="@+id/secondAnwser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_example"
            android:inputType="textCapWords"
            />

        <TextView
            style="@style/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionThree" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lessThanThree"
                android:text="@string/anwserRadio1"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lessThree"
                android:text="@string/anwserRadio2"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lessMoreThree"
                android:text="@string/anwserRadio3"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>
        <TextView
            style="@style/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionFour" />

        <TextView
            style="@style/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionFive" />

        <TextView
            style="@style/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionSix" />

        <TextView
            style="@style/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionSeven" />

        <TextView
            style="@style/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionEight" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getResults"
            android:id="@+id/results_button"
            android:onClick="getResults"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_title"
            style="@style/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/display_result"/>
    </LinearLayout>
</ScrollView>
